# py-be-base

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yaml  tests.yaml
migrations/: __init__.py  env.py
migrations/versions/: 0001_create_users_table.py
src/baseline/: __init__.py  config.py  db.py  exceptions.py  main.py
src/baseline/api/: __init__.py  health.py  users.py
src/baseline/models/: __init__.py  user.py
src/baseline/repositories/: user.py
src/baseline/schemas/: __init__.py  user.py
src/baseline/services/: __init__.py  user.py
tests/: test_db.py  test_health_api.py  test_main.py  test_user_service.py  test_users_api.py
